v410-zishao-link-cn-check

--- a/en-US/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/1.functinal-constraints-and-precautions.md
+++ b/en-US/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/1.functinal-constraints-and-precautions.md
@@ -14,6 +14,6 @@ Features of Physical Standby Database of OceanBase Database V4.1.0:
 
 * Physical Standby Database supports only the maximum performance mode. The maximum protection mode and maximum availability mode are no longer supported.
 
-The following figure shows the deployment architecture of Physical Standby Database.
+<!-- The following figure shows the deployment architecture of Physical Standby Database.
 
-![Deployment architecture of Physical Standby Database](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/active-and-standby-tenant/active-and-standby-tenant-deployment-architecture.png)
+![Deployment architecture of Physical Standby Database](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/active-and-standby-tenant/active-and-standby-tenant-deployment-architecture.png) -->
