--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/2.obproxy-cluster-parameter-management.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/2.obproxy-cluster-parameter-management.md
@@ -16,7 +16,7 @@ OceanBase Cloud Platform (OCP) allows you to view and modify parameters of an OD
 
    You can click **Change Value** in the **Actions** column, enter the new value in the dialog box that appears, and click **OK** to complete the modification.
 
-   <!-- For more information about the parameters of an ODP cluster, see [Parameters](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784). -->
+   For more information about the parameters of an ODP cluster, see [Parameters](https://en.oceanbase.com/docs/community-odp-en-10000000000864214).
 
 ## View change history
 
