--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/4.odp-cluster-parameters.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/4.odp-cluster-parameters.md
@@ -33,6 +33,6 @@ The following table describes the startup parameters that you can specify when y
 | task_thread_num | 2 | \[1, 4\] | The number of task threads for the ODP.  |
 | work_thread_num | 128 | \[1, 128\] | The number of worker threads for the ODP.  If the `automatic_match_work_thread` parameter is set to `true`, the `work_thread_num` parameter specifies the maximum number of worker threads.  |
 
-<!-- ## References
+## More information
 
-ODP parameters include startup parameters and other parameters. For information about other parameters, see [Parameters](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784). -->
+ODP parameters include startup parameters and other parameters. For information about other parameters, see [Parameters](https://en.oceanbase.com/docs/community-odp-en-10000000000864214).
