--- a/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/96.ob-323.md
+++ b/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/96.ob-323.md
@@ -39,15 +39,18 @@ OceanBase Database V3.2.3 improves the compatibility and performance of the data
 
    * Supports sequence objects.
 
-      Project delivery results show that business systems of customers are highly dependent on sequence objects. To simplify adaptation during business migration and improve the convenience of migration, in MySQL mode, OceanBase Database supports sequence objects and the `CREATE/ALTER/DROP SEQUENCE` operations. It allows you to perform the CURRVAL and NEXTVAL operations and reset the values of the objects. The value range of an object is INT64_MIN to INT64_MAX. <!--For more information, see [SEQUENCE](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000357894).-->
+      Project delivery results show that business systems of customers are highly dependent on sequence objects. To simplify adaptation during business migration and improve the convenience of migration, in MySQL mode, OceanBase Database supports sequence objects and the `CREATE/ALTER/DROP SEQUENCE` operations. It allows you to perform the CURRVAL and NEXTVAL operations and reset the values of the objects. The value range of an object is INT64_MIN to INT64_MAX. 
+      <!--For more information, see [SEQUENCE](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000357894).-->
 
    * Supports common table expressions (CTEs).
 
-      A CTE is a temporary result set that is not stored. It is usually referenced multiple times during a query. The CONNECT BY statement can be replaced with a CTE in some scenarios. The CTE syntax of OceanBase Database is compatible with MySQL 8.0. OceanBase Database supports recursive and non-recursive CTEs. <!--For more information, see [Common table expressions](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000356915).-->
+      A CTE is a temporary result set that is not stored. It is usually referenced multiple times during a query. The CONNECT BY statement can be replaced with a CTE in some scenarios. The CTE syntax of OceanBase Database is compatible with MySQL 8.0. OceanBase Database supports recursive and non-recursive CTEs. 
+      <!--For more information, see [Common table expressions](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000356915).-->
 
    * Supports CHECK constraints.
 
-      CHECK constraints are intended to maintain user-defined integrity and are usually used to check acceptable data or data formats of specified columns in a table. In earlier versions of OceanBase Database, the CHECK clause is parsed but not executed and is only used for partition pruning and optimization. This is consistent with that of the CHECK clause in MySQL 5.7. In this version, the behavior and restrictions of CHECK constraints are modified to be compatible with MySQL 8.0. You can use the `CREATE/ALTER/DROP TABLE` statements to create, modify, and destroy CHECK constraints. <!--For more information, see [CHECK constraints](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000357194).-->
+      CHECK constraints are intended to maintain user-defined integrity and are usually used to check acceptable data or data formats of specified columns in a table. In earlier versions of OceanBase Database, the CHECK clause is parsed but not executed and is only used for partition pruning and optimization. This is consistent with that of the CHECK clause in MySQL 5.7. In this version, the behavior and restrictions of CHECK constraints are modified to be compatible with MySQL 8.0. You can use the `CREATE/ALTER/DROP TABLE` statements to create, modify, and destroy CHECK constraints. 
+      <!--For more information, see [CHECK constraints](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000357194).-->
 
    * Supports character set settings in the CAST function.
 
@@ -69,7 +72,8 @@ OceanBase Database V3.2.3 improves the compatibility and performance of the data
 
    * Supports database links to Oracle (DBLinks).
 
-      DBLink is a built-in query client that allows business applications to access a remote database in the same way DBLink accesses a local database during SQL query execution. OceanBase Database adopts the Oracle Call Interface (OCI) driver to connect to Oracle databases in read-only mode. OceanBase Database supports access to table objects, displays query plans, and optimizes most built-in operators such as SCAN, SORT, and JOIN of Oracle databases. <!--For more information, see [Manage DBLinks](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000354983).-->
+      DBLink is a built-in query client that allows business applications to access a remote database in the same way DBLink accesses a local database during SQL query execution. OceanBase Database adopts the Oracle Call Interface (OCI) driver to connect to Oracle databases in read-only mode. OceanBase Database supports access to table objects, displays query plans, and optimizes most built-in operators such as SCAN, SORT, and JOIN of Oracle databases. 
+      <!--For more information, see [Manage DBLinks](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000354983).-->
 
    * OceanBase Database allows you to set initial values for sequence objects.
 
@@ -77,7 +81,8 @@ OceanBase Database V3.2.3 improves the compatibility and performance of the data
 
    * Supports the DBMS_LOB.COMPARE system package function.
 
-      OceanBase Database supports BLOB and CLOB data types and supports comparison of complete or partial LOB data. <!--For more information, see [COMPARE](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000356502).-->
+      OceanBase Database supports BLOB and CLOB data types and supports comparison of complete or partial LOB data. 
+      <!--For more information, see [COMPARE](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000356502).-->
 
 ### Performance optimization
 
