--- a/en-US/9.release-notes/102.community-edition-history-release/101.V3.1/1.V3.1.4.md
+++ b/en-US/9.release-notes/102.community-edition-history-release/101.V3.1/1.V3.1.4.md
@@ -84,7 +84,8 @@ When an unreasonable SQL execution plan is diagnosed, the DBA can use the SQL ID
 
 ### Enhanced product operation easiness
 
-* ob-operator supports the deployment of ODP, which makes it easier to use a multi-node cluster and improves the accuracy of query routing in the cluster. <!--For more information, see [Deploy ODP](https://www.oceanbase.com/docs/community-observer-cn-10000000000449661).-->
+* ob-operator supports the deployment of ODP, which makes it easier to use a multi-node cluster and improves the accuracy of query routing in the cluster. 
+  <!--For more information, see [Deploy ODP](https://www.oceanbase.com/docs/community-observer-cn-10000000000449661).-->
 
 * To be compatible with MySQL error codes, OceanBase Database of earlier versions converts the internal error codes to external error codes when the log is generated. As a result, the error codes displayed at the client are different from those recorded in the log, which adds extra workload to troubleshooting. To make the troubleshooting easier, this version prints the external error codes that are exported to the client and the corresponding internal error codes at the same time.
 
