--- a/en-US/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/0.physical-standby-database-overview.md
+++ b/en-US/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/0.physical-standby-database-overview.md
@@ -14,6 +14,6 @@ The Physical Standby Database solution in V4.1.0 has the following characteristi
 
 * The Physical Standby Database solution supports only the maximum performance mode and no longer supports the maximum protection or maximum availability mode.
 
-The following figure shows the deployment architecture of the Physical Standby Database solution.
+<!-- The following figure shows the deployment architecture of the Physical Standby Database solution.
 
-![Deployment architecture of the Physical Standby Database solution](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/active-and-standby-tenant/active-and-standby-tenant-deployment-architecture.png)
+![Deployment architecture of the Physical Standby Database solution](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/active-and-standby-tenant/active-and-standby-tenant-deployment-architecture.png) -->
