--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/1.create-an-obproxy-cluster.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/1.create-an-obproxy-cluster.md
@@ -53,7 +53,7 @@ You have logged on to the OCP console and are assigned the OBPROXY_MANAGER role 
 
    3. Enable **Parameter Settings**, and add or modify the startup parameters and other parameters.For more information about startup parameters, see [ODP startup parameters](../4.odp-cluster-parameters.md). 
    
-   <!-- For more information about other parameters, see [Parameters](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784). -->
+   For more information about other parameters, see [Parameters](https://en.oceanbase.com/docs/community-odp-en-10000000000864214).
 
       <!-- ![4](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8232382161/p240600.png) -->
 
