--- a/en-US/7.reference/4.development-reference/6.hbaseapi/3.use-of-the-hbaseapi-client.md
+++ b/en-US/7.reference/4.development-reference/6.hbaseapi/3.use-of-the-hbaseapi-client.md
@@ -8,8 +8,8 @@ Based on the basic APIs provided by TableAPI, the HBaseAPI client encapsulates t
 Before using the HBaseAPI client, learn the following basic knowledge about OceanBase Database:
 
 + [HBaseAPI solution introduction](1.introduction-to-hbaseapi-scheme.md)
-+ [Get started with OceanBase Database Enterprise Edition](../../../2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md)
-+ [Connect to an OceanBase database by using a MySQL client](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md)
++ [Get started with OceanBase Database](../../../2.quickstart/1.quickly-experience-oceanbase-for-community.md)
++ [Connect to OceanBase Database by using a MySQL client](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md)
 
 ## HBaseAPI deployment
 
@@ -45,11 +45,12 @@ For more information about how to connect to an OceanBase cluster by using OBCli
 2. In the left-side navigation pane, select **Cluster** and then find the **Clusters** list.
 3. Click the name of the cluster to be accessed to open it.
 4. On the cluster details page, find the **ConfigURL** parameter, which must be configured when the client is initialized.
-![Obtain ConfigURL](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V3.1.3/zh-CN/Tools/TableAPI/oceanbase-doczh-CN-9.supporting-tools-8.hbaseapi-HBaseAPI%20%E5%AE%A2%E6%88%B7%E7%AB%AF%E4%BD%BF%E7%94%A8%E4%BB%8B%E7%BB%8D-01.png)
+<!-- ![Obtain ConfigURL](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V3.1.3/zh-CN/Tools/TableAPI/oceanbase-doczh-CN-9.supporting-tools-8.hbaseapi-HBaseAPI%20%E5%AE%A2%E6%88%B7%E7%AB%AF%E4%BD%BF%E7%94%A8%E4%BB%8B%E7%BB%8D-01.png) -->
 
 ### Set the username and password for logon to an OBServer node from the client
 
-To connect to an OceanBase cluster from OBClient or a MySQL client, specify SYS_USER_NAME and SYS_PASSWORD. For more information, see [Create a user tenant](https://open.oceanbase.com/docs/observer-cn/V3.1.1/10000000000014143).
+To connect to an OceanBase cluster from OBClient or a MySQL client, specify SYS_USER_NAME and SYS_PASSWORD. 
+<!-- For more information, see [Create a user tenant](https://open.oceanbase.com/docs/observer-cn/V3.1.1/10000000000014143). -->
 The following sections take the proxyro user as an example. You must specify a password for the proxyro user. Sample statement:
 
 ```SQL
