--- a/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
+++ b/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
@@ -37,13 +37,15 @@ Compared with V3.2.3, OceanBase Database V3.2.4 improves the compatibility and s
 
 - Addition of the DBMS_RESOURCE_MANAGER system package
 
-   The DBMS_RESOURCE_MANAGER system package is added for creating and maintaining resource consumer groups, resource management plans, and binding rules of resource consumer groups. More functions are supported, such as CREATE_CONSUMER_GROUP, CREATE_PLAN, and SET_CONSUMER_GROUP_MAPPING.<!--For more information, see [Overview](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000946017).中文断链-->
+   The DBMS_RESOURCE_MANAGER system package is added for creating and maintaining resource consumer groups, resource management plans, and binding rules of resource consumer groups. More functions are supported, such as CREATE_CONSUMER_GROUP, CREATE_PLAN, and SET_CONSUMER_GROUP_MAPPING.
+   <!--For more information, see [Overview](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000946017).中文断链-->
 
 #### Compatibility with Oracle
 
 - Addition of the DBMS_SCHEDULER system package
 
-   The DBMS_SCHEDULER system package is added for managing scheduled tasks. More functions are supported, such as CREATE_JOB, CREATE_PROGRAM, and DEFINE_PROGRAM_ARGUMENT. <!--For more information, see [Overview](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000945869).中文断链-->
+   The DBMS_SCHEDULER system package is added for managing scheduled tasks. More functions are supported, such as CREATE_JOB, CREATE_PROGRAM, and DEFINE_PROGRAM_ARGUMENT.
+   <!--For more information, see [Overview](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000945869).中文断链-->
 
 - Supplementation of system package functions
 
